gccida/c3/gen_type
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type/src/c-aux-info.c:806:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type/src/c-aux-info.c:809:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type/src/c-aux-info.c:814:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type/src/c-aux-info.c:883:40: error: subscript of pointer to incomplete type 'struct rtx_def'
for ( i = concat( "", *( _QWORD *)( rtl[1].fld[0].rtwint + 32), 0LL); 
                                    ~~~^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type/src/config.h:7:8: note: forward declaration of 'struct rtx_def'
struct rtx_def;
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type/src/c-aux-info.c:885:41: error: subscript of pointer to incomplete type 'struct rtx_def'
i = concat( data_type, *( _QWORD *)( rtl[1].fld[0].rtwint + 32), 0LL) ) 
                                     ~~~^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type/src/config.h:7:8: note: forward declaration of 'struct rtx_def'
struct rtx_def;
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type/src/c-aux-info.c:1010:20: error: expected expression
v25 = ( tree_node *)v22[4]; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type/src/c-aux-info.c:1010:9: error: use of undeclared identifier 'tree_node'
v25 = ( tree_node *)v22[4]; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type/src/c-aux-info.c:1012:26: error: expected expression
if ( v25 == ( tree_node *)*( &global_trees + 27) ) 
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type/src/c-aux-info.c:1012:15: error: use of undeclared identifier 'tree_node'
if ( v25 == ( tree_node *)*( &global_trees + 27) ) 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type/src/c-aux-info.c:1017:20: error: expected expression
v25 = ( tree_node *)v22[4]; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type/src/c-aux-info.c:1017:9: error: use of undeclared identifier 'tree_node'
v25 = ( tree_node *)v22[4]; 
        ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type/src/obj/c-aux-info.o] Error 1
